Correct button visibiltiy

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ body {
   top: 40rem;
   font-size: 3.5rem;
   text-decoration: none;
+  visibility: hidden;
 }
 
 .submit:hover {
